# highyield

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
highyield/: __init__.py  basics.py  converter.py  copy.py  create.py  ds.py  imports.py  pdf.py  rename.py  tts.py
highyield/data/: RR.csv
