[metadata]
name = highyield
version = 1.0.2
author = KF
author_email = kenfv1@outlook.com
description = Collection of high-yield functions intended to simplify and automate specific tasks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kenf1/High-Yield
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True